# oledtv

./: README.md
oled-tv/: README.md  pyproject.toml
oled-tv/src/oled_tv/: display.py  gui.py  main.py  serial_manager.py
oled-tv/src/oled_tv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
